<?xml version="1.0" encoding="utf-8"?>
<!-- app/src/main/res/menu/menu_admin.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/saleListFragment"
        android:icon="@drawable/ic_point_of_sale"
        android:title="@string/menu_sales" />

    <item
        android:id="@+id/clientListFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/menu_clients" />

    <item
        android:id="@+id/discountListFragment"
        android:icon="@drawable/ic_local_offer"
        android:title="@string/menu_discounts" />

    <item
        android:id="@+id/productListFragment"
        android:icon="@drawable/ic_inventory_2"
        android:title="@string/menu_products" />

    <item
        android:id="@+id/brandListFragment"
        android:icon="@drawable/ic_label"
        android:title="@string/menu_brands" />

    <item
        android:id="@+id/nav_suppliers"
        android:icon="@drawable/ic_local_shipping"
        android:title="@string/menu_suppliers" />

    <item
        android:id="@+id/nav_purchase_orders"
        android:icon="@drawable/ic_assignment"
        android:title="Ordenes de Compra" />

    <item
        android:id="@+id/userManagementFragment"
        android:icon="@drawable/ic_admin_panel_settings"
        android:title="@string/menu_users" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />
</menu>
