<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_lateral">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_title"
        android:textAppearance="@style/TextAppearance.SwiftPay.TitleLarge"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="@dimen/spacing_elements" />

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_message"
        android:textAppearance="@style/TextAppearance.SwiftPay.BodyMedium"
        android:textColor="@color/colorTextSecondary"
        android:layout_marginBottom="@dimen/spacing_sections" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_marginEnd="@dimen/spacing_elements" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            app:backgroundTint="@color/colorError" />
    </LinearLayout>

</LinearLayout>
